Added CHANNEL_ID and GROUP_ID variables

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,3 @@
 BOT_TOKEN=Token provided by telegram to access the bot
+CHANNEL_ID=The chat_id of the posting channel
+GROUP_ID=The chat_id of the admin group
